--- a/alcohol.html
+++ b/alcohol.html
@@ -6,7 +6,12 @@
 </head>
 
 <body>
-   <a href="hello-world.html"><img src=""></a>
+<style>
+    img {
+        width: 400px;
+    }
+</style>
+<a href="hello-world.html"><img src="logo.jpg"></a>  
 <h1>Effects of Alcohol on the body</h1>
 <p>Excessive alcohol use can cause the pancreas to produce toxic substances that interfere with proper functioning. The resulting inflammation is called pancreatitis, a serious problem that can destroy the pancreas. One of the most frequent causes of chronic pancreatitis is alcohol abuse.</p> 
 <h2>Effect of Alcohol in social life</h2>
