--- a/smoke.html
+++ b/smoke.html
@@ -5,6 +5,11 @@
 </head>
 
 <body>
+<style>
+    img {
+        width: 400px;
+    }
+</style>
 <a href="hello-world.html"><img src="logo.jpg"></a>  
 <h1>Effect of smoking on the body</h1>
 <h2>Brain</h2>
